@@ -89,7 +89,7 @@ public:
     // count number of occupied bins
     virtual const HashIntoType n_occupied() const
     {
-        return _occupied_bins/_n_tables;
+        return _occupied_bins;
     }
 
     virtual const HashIntoType n_unique_kmers() const
@@ -126,7 +126,9 @@ public:
 
             unsigned char bits_orig = __sync_fetch_and_or( *(_counts + i) + byte, bit );
             if (!(bits_orig & bit)) {
-                __sync_add_and_fetch( &_occupied_bins, 1 );
+                if (i == 0) {
+                  __sync_add_and_fetch( &_occupied_bins, 1 );
+                }
                 is_new_kmer = true;
             }
         } // iteration over hashtables
@@ -154,13 +156,15 @@ public:
             HashIntoType byte = bin / 8;
             unsigned char bit = bin % 8;
             if (!( _counts[i][byte] & (1<<bit))) {
-                _occupied_bins += 1;
+                if (i == 0) {
+                  __sync_add_and_fetch(&_occupied_bins, 1);
+                }
                 is_new_kmer = true;
             }
             _counts[i][byte] |= (1 << bit);
         }
         if (is_new_kmer) {
-            _n_unique_kmers +=1;
+            __sync_add_and_fetch(&_n_unique_kmers, 1);
         }
     }
 
