@@ -499,6 +499,7 @@ def test_save_load_large():
 
 def test_save_load_occupied():
     def do_test(ctfile):
+        print('working with', ctfile)
         inpath = utils.get_test_data('random-20-a.fa')
         savepath = utils.get_temp_filename(ctfile)
 
@@ -513,7 +514,7 @@ def test_save_load_occupied():
         assert orig_count == 3886, orig_count
         assert loaded_count == orig_count, loaded_count
 
-    for ctfile in ['temp.ct.gz', 'temp.ct']:
+    for ctfile in ['temp.ct', 'temp.ct.gz']:
         do_test(ctfile)
 
 
@@ -1327,13 +1328,14 @@ def test_find_all_tags_list_error():
 def test_abund_dist_gz_bigcount():
     infile = utils.get_temp_filename('test.fa')
     shutil.copyfile(utils.get_test_data('test-abund-read-2.fa'), infile)
-    outfile = utils.get_temp_filename('test_ct.gz')
     script = 'load-into-counting.py'
     htfile = utils.get_temp_filename('test_ct')
     args = ['-x', str(1e7), '-N', str(2), '-k', str(2), htfile, infile]
     utils.runscript(script, args)  # create a bigcount table
     assert os.path.exists(htfile)
     data = open(htfile, 'rb').read()
+
+    outfile = utils.get_temp_filename('test_ct.gz')
     f_out = gzip.open(outfile, 'wb')  # compress the created bigcount table
     f_out.write(data)
     f_out.close()
@@ -1342,6 +1344,45 @@ def test_abund_dist_gz_bigcount():
         countgraph = khmer.load_countgraph(outfile)
     except OSError as err:
         assert 0, 'Should not produce OSError: ' + str(err)
+
+    assert countgraph.n_occupied() != 0
+    hashsizes = countgraph.hashsizes()
+    kmer_size = countgraph.ksize()
+    tracking = khmer._Nodegraph(kmer_size, hashsizes)
+    abundances = countgraph.abundance_distribution(infile, tracking)
+    # calculate abundance distribution for compressed bigcount table
+    flag = False
+    # check if abundance is > 255
+    # if ok  gzipped bigcount was loaded correctly
+    for _, i in enumerate(abundances):
+        print(_, i)
+        if _ > 255 and i > 0:
+            flag = True
+            break
+    assert flag
+
+
+def test_abund_dist_gz_bigcount_compressed_first():
+    infile = utils.get_temp_filename('test.fa')
+    shutil.copyfile(utils.get_test_data('test-abund-read-2.fa'), infile)
+    script = 'load-into-counting.py'
+    htfile = utils.get_temp_filename('test_ct.gz')
+    args = ['-x', str(1e7), '-N', str(2), '-k', str(2), htfile, infile]
+    utils.runscript(script, args)  # create a bigcount table
+    assert os.path.exists(htfile)
+    data = gzip.open(htfile, 'rb').read() # read compressed bigcount table
+
+    outfile = utils.get_temp_filename('test_ct')
+    f_out = open(outfile, 'wb')  # output the bigcount table
+    f_out.write(data)
+    f_out.close()
+    # load the compressed bigcount table
+    try:
+        countgraph = khmer.load_countgraph(outfile)
+    except OSError as err:
+        assert 0, 'Should not produce OSError: ' + str(err)
+
+    assert countgraph.n_occupied() != 0
     hashsizes = countgraph.hashsizes()
     kmer_size = countgraph.ksize()
     tracking = khmer._Nodegraph(kmer_size, hashsizes)
